# business-modeler-python

./: .gitignore  LICENSE.md  README.md  business_modeler.py  cli.py  config.yaml  engine.py  generate_requirements.sh  parse.py  pyproject.toml  reporting.py  requirements.txt  run_tests_with_coverage.sh  utils.py
chainflow/: cli.py  engine.py  parse.py  reporting.py  utils.py
chains/: article_summarizer.txt  business_model_chain.txt  linkedin_post.txt  product_plan.txt  simple_chain.txt
examples/: example1.md  example2.md  example3.md  template.md
prompts/: business_model_chain.txt  simple_chain.txt
templates/: alternatives.txt  assumptions.txt  canvas.txt  experiments.txt  input_example.md  output.txt  risks.txt
tests/: test_create_llm_chain.py  test_main.py  test_parser.py  test_reporting.py  test_util_functions.py
